fix(web): Corregir detalles en página solicitud.
Se quita scrollbar de listado de beneficiarios y de previsiones.
Se crea interfaz ICard para tipo de dato de las cards.
Se condiciona pregunta ¿Reembolsaste previamente...? para aparecer si se selecciona la prestación "Consulta médica" o "Examenes y Procedimientos".
Se modifica información de beneficiarios que se reflejarán en pantalla (página historial y página solicitud).

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -123,6 +123,12 @@ ds-select-v2 ds-icon {
     margin-top: 0px;
   }
 }
+
+.css-qndpii {
+  overflow-y: unset !important;
+  max-height: fit-content !important;
+}
+
 .input_container {
   box-sizing: border-box;
   position: relative;
